z-index correction

--- a/src/teachers-module/pages/SearchLessons.css
+++ b/src/teachers-module/pages/SearchLessons.css
@@ -104,7 +104,7 @@
   max-height: 260px;
   overflow-y: auto;
 
-  z-index: 100000; /* higher than Ionic headers */
+  z-index: 100;
 }
 
 .search-history-item {
